# talkie

./: Cargo.toml  README.md
talkie/: Cargo.toml
talkie/examples/: basic.rs
talkie/src/: lib.rs
textarea/: CHANGELOG.md  Cargo.toml  README.md
textarea/examples/: basic.rs
textarea/src/: lib.rs
universal-tagger/: CHANGELOG.md  Cargo.toml  README.md
universal-tagger/examples/: basic.rs  tag.rs
universal-tagger/src/: language.rs  language_detection.rs  lib.rs  stop_words.rs  tagger.rs  unicode_segmentation.rs
