[package]
name = "universal-tagger"
version = "0.0.0"
edition = "2021"

authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "A language-agnostic natural-language tagger written in Rust"
homepage = "https://github.com/schneiderfelipe/talkie/tree/main/universal-tagger#universal-tagger"
repository = "https://github.com/schneiderfelipe/talkie"
license = "MIT"

[dependencies]
lingua = { version = "1.4.0", default-features = false, optional = true }
whatlang = { version = "0.16.2", default-features = false, optional = true }

unicode-segmentation = { version = "1.10.0", default-features = false }

cfg-if = { version = "1.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
strum = { version = "0.24.1", default-features = false, features = ["derive"] }
itertools = { version = "0.10.5", default-features = false }
unicode_categories = { version = "0.1.1", default-features = false }

[features]
default = ["whatlang", "arabic", "bengali", "english", "esperanto", "french", "german", "hindi", "indonesian", "italian", "japanese", "mandarin", "portuguese", "punjabi", "russian", "spanish", "turkish", "urdu"]
arabic = ["lingua?/arabic"]
bengali = ["lingua?/bengali"]
english = ["lingua?/english"]
esperanto = ["lingua?/esperanto"]
french = ["lingua?/french"]
german = ["lingua?/german"]
hindi = ["lingua?/hindi"]
indonesian = ["lingua?/indonesian"]
italian = ["lingua?/italian"]
japanese = ["lingua?/japanese"]
mandarin = ["lingua?/chinese"]
portuguese = ["lingua?/portuguese"]
punjabi = ["lingua?/punjabi"]
russian = ["lingua?/russian"]
spanish = ["lingua?/spanish"]
turkish = ["lingua?/turkish"]
urdu = ["lingua?/urdu"]

[dev-dependencies]
pretty_assertions = { version = "1.3.0", default-features = false, features = ["alloc"] }
textarea = { path = "../textarea" }

[package.metadata.workspaces]
independent = true
